# quickbench

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  REVIEW.md
.zed/: settings.json  tasks.json
examples/: macro_example.rs  sort_compare.rs
quickbench-macros/: Cargo.toml
quickbench-macros/src/: lib.rs
src/: lib.rs  tests.rs
