[package]
name = "quickbench"
version = "0.1.1"
edition = "2024"
description = "A tiny no-frills micro-benchmark harness. Benchmarks are #[test] #[ignore] functions runnable via cargo test."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xxorza/quickbench"
readme = "README.md"
keywords = ["benchmark", "bench", "performance", "testing"]
categories = ["development-tools::testing", "development-tools::profiling"]
exclude = ["AGENTS.md", "CLAUDE.md", "REVIEW.md", ".zed/", "bench-results/", "target/"]

[lints.clippy]
items_after_test_module = "deny"

[dependencies]
quickbench-macros = { version = "0.1.1", path = "quickbench-macros" }
named-lock = "0.4"
