[package]
name = "quickbench-macros"
version = "0.1.0"
edition = "2024"
description = "Proc-macro crate for quickbench. Provides #[quick_bench]."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xxorza/quickbench"
documentation = "https://docs.rs/quickbench-macros"
keywords = ["benchmark", "macro", "proc-macro"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
