[package]
name = "quickbench-macros"
version = "0.1.1"
edition = "2024"
description = "Proc-macro crate for quickbench. Provides #[quick_bench]."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xxorza/quickbench"
keywords = ["benchmark", "macro", "proc-macro"]
categories = ["development-tools::testing"]
exclude = ["AGENTS.md", "CLAUDE.md"]

[lints.clippy]
items_after_test_module = "deny"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
